# router/movietheater.js
@@ -5,9 +5,9 @@ const validate = require('../middleware/validate');
 const { addMovieIntoTheaterSchema, updateMovieIntoTheaterScehma, deleteMovieIntoTheaterSchema } = require('../validate/movietheater');
 
 const Router=require('express').Router()
-Router.post('/add',validate(addMovieIntoTheaterSchema,"body"),auth,addMovieIntoTheater);
-Router.put('/update',validate(updateMovieIntoTheaterScehma ,"body"),auth,updateMovieIntoTheater)
-Router.delete('/delete',validate(deleteMovieIntoTheaterSchema ,"body"),auth,deleteMovieIntoTheater)
+Router.post('/addShow',validate(addMovieIntoTheaterSchema,"body"),auth,addMovieIntoTheater);
+Router.put('/updateShow/:MT_Id',validate(updateMovieIntoTheaterScehma ,"body"),auth,updateMovieIntoTheater)
+Router.delete('/deleteShow/:MT_Id',validate(deleteMovieIntoTheaterSchema ,"body"),auth,deleteMovieIntoTheater)
 
 
 module.exports=Router;
